# WinterWind

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  caldavclient.cpp  caldavclient.h  console.cpp  console.h  elasticsearchclient.cpp  elasticsearchclient.h  gitlabapiclient.cpp  gitlabapiclient.h  httpclient.cpp  httpclient.h  postgresqlclient.cpp
cmake/Modules/: CodeCoverage.cmake  FindJson.cmake
doc/: Doxyfile.in
doc/lua/: httpclient.md
include/: caldavclient.h  console.h  elasticsearchclient.h  gitlabapiclient.h  httpclient.h  httpcommon.h  httpresponse.h  httpserver.h  jiraclient.h  luaengine.h  luahelper.h  mysqlclient.h  namegenerator.h  oauthclient.h  openweathermapclient.h  postgresqlclient.h  ratpclient.h  redisclient.h  slackclient.h  twitterclient.h  xmlparser.h
include/core/: caldavclient.h  console.h  elasticsearchclient.h  httpclient.h  httpcommon.h  httpresponse.h  httpserver.h  luaengine.h  luahelper.h  mysqlclient.h  namegenerator.h  oauthclient.h  openweathermapclient.h  postgresqlclient.h  ratpclient.h  redisclient.h  slackclient.h  twitterclient.h  xmlparser.h
include/core/amqp/: channel.h  connection.h  consumer.h  envelope.h  exception.h  exchange.h  inoutexchange.h  log.h  message.h  queue.h  types.h
include/core/databases/: database.h  mysqlclient.h  postgresqlclient.h
include/core/http/: log.h  query.h
include/core/utils/: base64.h  classhelpers.h  exception.h  hmac.h  jsonwebtokens.h  log.h  macros.h  semaphore.h  stringutils.h  threadpool.h  threads.h  threadsafequeue.h  time.h  uuid.h
include/extras/: caldavclient.h  elasticsearchclient.h  gitlabapiclient.h  ircclient.h  jiraclient.h  luaextraengine.h  namegenerator.h  openweathermapclient.h  ratpclient.h  slackclient.h  twitterclient.h
include/utils/: base64.h  classhelpers.h  exception.h  hmac.h  macros.h  semaphore.h  stringutils.h  threadpool.h  threads.h  threadsafequeue.h  time.h
src/: CMakeLists.txt  caldavclient.cpp  cmake_config.h.in  console.cpp  elasticsearchclient.cpp  gitlabapiclient.cpp  httpclient.cpp  httpresponse.cpp  httpserver.cpp  jiraclient.cpp  luaengine.cpp  mysqlclient.cpp  namegenerator.cpp  oauthclient.cpp  openweathermapclient.cpp  postgresqlclient.cpp  ratpclient.cpp  ratpclient.h  redisclient.cpp  slackclient.cpp  twitterclient.cpp  xmlparser.cpp
src/core/: CMakeLists.txt  console.cpp  elasticsearchclient.cpp  httpclient.cpp  httpresponse.cpp  httpserver.cpp  jiraclient.cpp  luaengine.cpp  mysqlclient.cpp  namegenerator.cpp  oauthclient.cpp  openweathermapclient.cpp  postgresqlclient.cpp  redisclient.cpp  slackclient.cpp  twitterclient.cpp  xmlparser.cpp
src/core/amqp/: channel.cpp  connection.cpp  consumer.cpp  envelope.cpp  exchange.cpp  inoutexchange.cpp  log.cpp  message.cpp  queue.cpp
src/core/databases/: mysqlclient.cpp  postgresqlclient.cpp
src/core/http/: log.cpp
src/core/lua/: CMakeLists.txt  l_httpclient.cpp  l_httpclient.h  l_jiraclient.cpp  l_jiraclient.h  l_pgclient.cpp  l_pgclient.h  l_ratp.cpp  l_string.cpp  l_string.h  l_xmlparser.cpp  l_xmlparser.h  luahelper.cpp
src/core/utils/: base64.cpp  hmac.cpp  jsonwebtokens.cpp  log.cpp  semaphore.cpp  stringutils.cpp  threads.cpp  time.cpp  uuid.cpp
src/extras/: CMakeLists.txt  caldavclient.cpp  elasticsearchclient.cpp  gitlabapiclient.cpp  ircclient.cpp  jiraclient.cpp  luaextraengine.cpp  namegenerator.cpp  openweathermapclient.cpp  ratpclient.cpp  slackclient.cpp  twitterclient.cpp
src/extras/lua/: CMakeLists.txt  l_jiraclient.cpp  l_jiraclient.h  l_ratp.cpp
src/lua/: CMakeLists.txt  l_httpclient.cpp  l_httpclient.h  l_jiraclient.cpp  l_jiraclient.h  l_pgclient.cpp  l_pgclient.h  l_ratp.cpp  l_string.cpp  l_string.h  l_xmlparser.cpp  l_xmlparser.h  luahelper.cpp
src/unittests/: CMakeLists.txt  main.cpp  test_elasticsearch.cpp  test_elasticsearch.h  test_gitlab.cpp  test_gitlab.h  test_http.h  test_misc.h  test_mysql.h  test_postgresql.cpp  test_postgresql.h  test_rabbitmq.cpp  test_rabbitmq.h  test_string.cpp  test_string.h  test_threads.cpp  test_threads.h  test_time.cpp  test_time.h  test_twitter.cpp  test_twitter.h  tests.h  unittests.lua  unittests_config.h.in
src/utils/: base64.cpp  hmac.cpp  semaphore.cpp  stringutils.cpp  threads.cpp  time.cpp
utils/: base64.cpp  base64.h  exception.h  semaphore.cpp  stringutils.cpp  stringutils.h  threads.cpp  threads.h
